--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"cf-typegen": "wrangler types --env-interface CloudflareBindings"
 	},
 	"dependencies": {
+		"bcryptjs": "^3.0.3",
 		"hono": "^4.11.5",
 		"ical.js": "^2.2.1",
 		"pg": "^8.17.2"
