--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "vtodo",
 	"type": "module",
 	"scripts": {
-		"dev": "wrangler dev",
+		"dev": "bun run scripts/dev.ts",
 		"deploy": "wrangler deploy --minify",
 		"cf-typegen": "wrangler types --env-interface CloudflareBindings"
 	},
