--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,7 @@
 		"lib": ["ESNext"],
 		"jsx": "react-jsx",
 		"jsxImportSource": "hono/jsx"
-	}
+	},
+	"include": ["src/**/*.ts", "src/**/*.tsx", "worker-configuration.d.ts"],
+	"exclude": ["temp", "node_modules"]
 }
